# raspihats

./: .gitignore  LICENSE  MANIFEST  MANIFEST.in  README  README.md  README.rst  pyproject.toml  setup.py
clk_stretch/: clk_stretch.py
doc/: Makefile  conf.py  i2c_hats.rst  index.html  index.rst  modules.rst  raspihats.html  raspihats.rst  search.js
doc/raspihats/: crc16.html  i2c_hats.html
doc/raspihats/i2c_hats/: _base.html  _digital.html  _frame.html  robot.html
docs/: conf.py  index.rst  raspihats.i2c_hats.rst  raspihats.rst
raspihats/: _digital.py  _i2c_frame.py  _i2c_hat.py  crc16.py  digital.py  i2c_frame.py  i2c_hat_modules.py  i2c_hats.py  i2c_hats_robot.py
raspihats/i2c_hats/: __init__.py  _base.py  _boards.py  _digital.py  _frame.py  robot.py
